fix weird overflow margin

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -15,7 +15,7 @@ body {
         color: white;
         border-top: 30px solid #e2e2e2;
         line-height: 120px;
-        margin: 60px -90px;
+        margin: 60px 0;
         font-size: 34px;
         font-size: 3.4rem;
         padding-left: 90px;
